fix z-index problem

--- a/assets/scss/components/_heading.scss
+++ b/assets/scss/components/_heading.scss
@@ -1,6 +1,5 @@
 #heading {
     box-shadow: 2px 2px 10px rgba($color: darken(#eee, 20%), $alpha: .5) ;
-    position : relative;
     z-index: 1;
     color: $white;
     overflow: hidden;
@@ -33,7 +32,6 @@
     height: 100%;
     position: relative;
     overflow: hidden;
-    z-index: 3;
       
     .information, .illustration {
         z-index : 3;
@@ -49,7 +47,6 @@
     
     .information {
         position: relative;
-        z-index: 5;
         flex-direction: column;
         justify-content: center;
         margin-left: 24px ;
